--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -4,15 +4,13 @@ on: push
 
 jobs: 
     job1:
-	name: First job
 	runs on: ubuntu-latest
 	steps: 
 	- name: Step one
 	  uses: actions/checkout@v2
-	- name: Step two 
 	  run: env | sort
     job2:
-	name: Second job
+	name: "Secondjob"
 	runs on: windows-latest
 	steps:
 	- name: Step one
