--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -4,13 +4,14 @@ on: push
 
 jobs: 
     job1:
+    	name: First job
 	runs on: ubuntu-latest
 	steps: 
 	- name: Step one
 	  uses: actions/checkout@v2
 	  run: env | sort
     job2:
-	name: "Secondjob"
+	name: Secondjob
 	runs on: windows-latest
 	steps:
 	- name: Step one
