--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -1,23 +1,17 @@
 name: first
 
-on: [push]
+on: push
 
-jobs: 
+jobs:
     job1:
-    
-    	name: First job
-	runs on: ubuntu-latest
-	
-	steps: 
-	- uses: actions/checkout@v1
-	run: env | sort 
-    
+        name: First Job
+        runs-on: ubuntu-latest
+        steps:
+            - name: Step one
+            - name: Step two
     job2:
-    
-	name: Secondjob
-	runs on: windows-latest
-	steps:
-	- name: Step one
-	  uses: actions/checkout@v2
-	- name: Step two
-	  run: "Get-ChildItem Env: | Sort-Object Name"
+        name: Second Job
+        runs-on: windows-latest
+        steps:
+            - name: Step one
+            - name: Step two
